@@ -1,5 +1,5 @@
 # Appia version and jar name
-APPIA.version=4.0-RC12
+APPIA.version=4.0.0
 APPIA.jarname=appia
 
 # Java compiler options
