@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
  * Appia: Group communication and protocol composition framework library
- * Copyright 2006-2007 University of Lisbon
+ * Copyright 2006-2007 University of Lisboa
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
