@@ -4,72 +4,72 @@
 <appia>
 <template name="text">
 	<session name="tcp" sharing="global">
-		<protocol>org.continuent.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
+		<protocol>net.sf.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
 	</session>
 	<session name="gbl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.bottom.GroupBottomLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.bottom.GroupBottomLayer</protocol>
 	</session>
 	<session name="gol" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.heal.GossipOutLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.GossipOutLayer</protocol>
 	</session>
 	<session name="suspectl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.suspect.SuspectLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.suspect.SuspectLayer</protocol>
 	</session>		
 	<session name="intral" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.intra.IntraLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.intra.IntraLayer</protocol>
 	</session>
 	<session name="interl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.inter.InterLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.inter.InterLayer</protocol>
 	</session>
 	<session name="hl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.heal.HealLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.HealLayer</protocol>
 	</session>
 	<session name="stablel" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.stable.StableLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.stable.StableLayer</protocol>
 	</session>
 	<session name="ll" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.leave.LeaveLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.leave.LeaveLayer</protocol>
 	</session>
 	<session name="vsl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.sync.VSyncLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.sync.VSyncLayer</protocol>
 	</session>
 	<session name="msg" sharing="label">
-		<protocol>org.continuent.appia.test.xml.MessengerLayer</protocol>
+		<protocol>net.sf.appia.test.xml.MessengerLayer</protocol>
 	</session>
 </template>
 <template name="draw">
 	<session name="tcp" sharing="global">
-		<protocol>org.continuent.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
+		<protocol>net.sf.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
 	</session>
 		<session name="gbl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.bottom.GroupBottomLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.bottom.GroupBottomLayer</protocol>
 	</session>
 	<session name="gol" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.heal.GossipOutLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.GossipOutLayer</protocol>
 	</session>
 	<session name="suspectl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.suspect.SuspectLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.suspect.SuspectLayer</protocol>
 	</session>		
 	<session name="intral" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.intra.IntraLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.intra.IntraLayer</protocol>
 	</session>
 	<session name="interl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.inter.InterLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.inter.InterLayer</protocol>
 	</session>
 	<session name="hl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.heal.HealLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.HealLayer</protocol>
 	</session>
 	<session name="stablel" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.stable.StableLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.stable.StableLayer</protocol>
 	</session>
 	<session name="ll" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.leave.LeaveLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.leave.LeaveLayer</protocol>
 	</session>
 	<session name="vsl" sharing="label">
-		<protocol>org.continuent.appia.protocols.group.sync.VSyncLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.sync.VSyncLayer</protocol>
 	</session>
 	<session name="msg" sharing="label">
-		<protocol>org.continuent.appia.test.xml.MessengerLayer</protocol>
+		<protocol>net.sf.appia.test.xml.MessengerLayer</protocol>
 	</session>
 </template>
 </appia>
