@@ -4,43 +4,43 @@
 <appia>
 	<template name="Uniform Tcp Template">
 	<session name="tcp" sharing="private">
-		<protocol>org.continuent.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
+		<protocol>net.sf.appia.protocols.tcpcomplete.TcpCompleteLayer</protocol>
 	</session>
 	<session name="gbl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.bottom.GroupBottomLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.bottom.GroupBottomLayer</protocol>
 	</session>
 	<session name="gol" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.heal.GossipOutLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.GossipOutLayer</protocol>
 	</session>
 	<session name="suspectl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.suspect.SuspectLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.suspect.SuspectLayer</protocol>
 	</session>		
 	<session name="intral" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.intra.IntraLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.intra.IntraLayer</protocol>
 	</session>
 	<session name="interl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.inter.InterLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.inter.InterLayer</protocol>
 	</session>
 	<session name="hl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.heal.HealLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.HealLayer</protocol>
 	</session>
 	<session name="stablel" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.stable.StableLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.stable.StableLayer</protocol>
 	</session>
 	<session name="ll" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.leave.LeaveLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.leave.LeaveLayer</protocol>
 	</session>
 	<session name="vsl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.sync.VSyncLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.sync.VSyncLayer</protocol>
 	</session>
 	<session name="loopbackl" sharing="private">
-		<protocol>org.continuent.appia.protocols.loopback.LoopbackLayer</protocol>
+		<protocol>net.sf.appia.protocols.loopback.LoopbackLayer</protocol>
 	</session>
 	<session name="uniforml" sharing="private">
-		<protocol>org.continuent.appia.protocols.uniform.UniformLayer</protocol>
+		<protocol>net.sf.appia.protocols.uniform.UniformLayer</protocol>
 	</session>
 	<session name="perf" sharing="private">
-		<protocol>org.continuent.appia.test.perf.PerfLayer</protocol>
+		<protocol>net.sf.appia.test.perf.PerfLayer</protocol>
 	</session>
 	</template>
 
