@@ -4,52 +4,52 @@
 <appia>
 	<template name="Gossip Group Template">
 	<session name="udp" sharing="private">
-		<protocol>org.continuent.appia.protocols.udpsimple.UdpSimpleLayer</protocol>
+		<protocol>net.sf.appia.protocols.udpsimple.UdpSimpleLayer</protocol>
 	</session>
 	<session name="fifo" sharing="private">
-		<protocol>org.continuent.appia.protocols.fifo.FifoLayer</protocol>
+		<protocol>net.sf.appia.protocols.fifo.FifoLayer</protocol>
 	</session>
 	<session name="gbl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.bottom.GroupBottomLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.bottom.GroupBottomLayer</protocol>
 	</session>
 	<session name="gol" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.heal.GossipOutLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.GossipOutLayer</protocol>
 	</session>
 	<session name="suspectl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.suspect.SuspectLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.suspect.SuspectLayer</protocol>
 	</session>		
 	<session name="intral" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.intra.IntraLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.intra.IntraLayer</protocol>
 	</session>
 	<session name="interl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.inter.InterLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.inter.InterLayer</protocol>
 	</session>
 	<session name="hl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.heal.HealLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.heal.HealLayer</protocol>
 	</session>
 	<session name="stablel" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.stable.StableLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.stable.StableLayer</protocol>
 	</session>
 	<session name="ll" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.leave.LeaveLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.leave.LeaveLayer</protocol>
 	</session>
 	<session name="vsl" sharing="private">
-		<protocol>org.continuent.appia.protocols.group.sync.VSyncLayer</protocol>
+		<protocol>net.sf.appia.protocols.group.sync.VSyncLayer</protocol>
 	</session>
 	<session name="gossip" sharing="label">
-		<protocol>org.continuent.appia.protocols.gossipServer.GossipServerLayer</protocol>
+		<protocol>net.sf.appia.protocols.gossipServer.GossipServerLayer</protocol>
 	</session>
 	</template>
 
 	<template name="Gossip Client Template">
 	<session name="udp" sharing="private">
-		<protocol>org.continuent.appia.protocols.udpsimple.UdpSimpleLayer</protocol>
+		<protocol>net.sf.appia.protocols.udpsimple.UdpSimpleLayer</protocol>
 	</session>
 	<session name="fifo" sharing="private">
-		<protocol>org.continuent.appia.protocols.fifo.FifoLayer</protocol>
+		<protocol>net.sf.appia.protocols.fifo.FifoLayer</protocol>
 	</session>
 	<session name="gossip" sharing="label">
-		<protocol>org.continuent.appia.protocols.gossipServer.GossipServerLayer</protocol>
+		<protocol>net.sf.appia.protocols.gossipServer.GossipServerLayer</protocol>
 	</session>
 	</template>
 
